fix call background to show bg image

--- a/discord-css-snippets/background.css
+++ b/discord-css-snippets/background.css
@@ -36,3 +36,7 @@
 	
 	--version1_0_5:			none;				/* DO NOT CHANGE THIS VARIABLE , USED TO HIDE UPDATE NOTICE										*/
 }
+
+.visual-refresh .root_bfe55a {
+    background: transparent;
+}
